--- a/christmas/templates/christmas/index.html
+++ b/christmas/templates/christmas/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Is it Christmas?</title>
+    <title>🎅 Is it Christmas?</title>
     <link rel="stylesheet" href="{% static 'christmas/styles.css' %}">
 </head>
 <body>
